--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,37 @@
 // Navigation Styles here
+
+.navigation {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px dashed black;
+    width: 100%;
+
+    .navbar {
+        margin-top: 19.92px;
+        margin-right: 10%;
+    }
+
+    h1 {
+        margin-left: 10%;
+    }
+    
+    a {
+        margin: 20px;
+        text-decoration: none;
+        color: black;
+    }
+
+    a:hover {
+        font-weight: bold;
+    }
+}
+
+.bus-img {
+    display: flex;
+    justify-content: center;
+
+    img {
+        width: 80%;
+    }
+    
+}
