--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,26 @@
 // Mixins in here
+
+.btnStyle {
+    width: 150px;
+    font-size: 13px;
+    text-align: center;
+    margin-left: 20px;
+    padding: 10px 40px;
+    border-radius: 10px;
+    background-color: teal;
+}
+
+.btn{
+    .btnStyle();
+
+    @media @mobile {
+        width: 80%;
+        background-color: lighten(teal, 15%);
+        color: white;
+        font-size: 15px;
+    }
+}
+
+.btn:hover {
+    background-color: darken(teal, 5%)
+}
